--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <div id="score" class="score">0</div>
     <div id="timer" class="timer">00:00</div>
   </div>
+
+  <div class="high-score-container">
+    High Score:
+    <div id="highScore"></div>
+  </div>
     
   <script type="text/javascript" src="/assets/js/index.js"></script>
 </body>
