start of phase 3

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div class="high-score-container">
     High Score:
     <div id="highScore"></div>
+    <div id="highScoreName"></div>
   </div>
     
   <script type="text/javascript" src="/assets/js/index.js"></script>
