--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
     <div id="timer" class="timer">00:00</div>
   </div>
 
-  <div class="high-score-container">
-    High Score:
-    <div id="highScore"></div>
-    <div id="highScoreName"></div>
+  <div class="high-scores-container">
+    
   </div>
     
   <script type="text/javascript" src="/assets/js/index.js"></script>
