--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="high-scores-container">
     
   </div>
-    
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.7.3/localforage.min.js" integrity="sha256-H/ZsHjKSJUnQyCQHZwPmn7VTWFeTTI+qgCP1GkiB9zI=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="/assets/js/index.js"></script>
 </body>
 </html>
